--- a/photography.html
+++ b/photography.html
@@ -17,15 +17,27 @@
     <noscript
       ><link rel="stylesheet" href="/assets/css/noscript.css"
     /></noscript>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css"
+    />
   </head>
   <body class="no-sidebar is-preload">
     <div id="page-wrapper">
       <!-- Header -->
       <div id="header">
         <!-- Inner -->
-        <div class="inner">
+        <div class="inner" style="padding-top: 20vh">
           <header>
-            <h1>Photography</h1>
+            <h1
+              style="
+                font-size: 4em;
+                text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
+              "
+            >
+              Visual Journey
+            </h1>
+            <p style="font-size: 1.5em">Through My Lens</p>
           </header>
         </div>
 
