--- a/photography.html
+++ b/photography.html
@@ -27,7 +27,7 @@
       <!-- Header -->
       <div id="header">
         <!-- Inner -->
-        <div class="inner" style="padding-top: 20vh">
+        <div class="inner">
           <header>
             <h1
               style="
