--- a/photography.html
+++ b/photography.html
@@ -99,6 +99,42 @@
         </section>
       </div>
 
+      <div class="photo-grid">
+        <!-- 示例条目 - 需要复制修改每个作品 -->
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/london2.JPG"
+            data-lightbox="gallery"
+            data-title="London, UK"
+          >
+            <img
+              src="/images/photograph/small/london2.jpeg"
+              alt="London View"
+            />
+            <div class="photo-info">
+              <h3>London Lights</h3>
+              <p>December 2024</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/regents.jpg"
+            data-lightbox="gallery"
+            data-title="London, UK"
+          >
+            <img
+              src="/images/photograph/small/regents.jpeg"
+              alt="London View"
+            />
+            <div class="photo-info">
+              <h3>London Lights</h3>
+              <p>December 2024</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
       <!-- Carousel -->
       <section class="carousel">
         <div class="reel">
