--- a/research/index.html
+++ b/research/index.html
@@ -76,22 +76,24 @@
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
               <section>
-                <h4><a href="/research/index.html">Overview</a></h4>
+                <h4 style="font-weight: 500">
+                  <a href="/research/index.html">Overview</a>
+                </h4>
                 <p></p>
-                <h4>
+                <h4 style="font-weight: 500">
                   <a
                     href="/research/compilation-for-neutral-atom-quantum-computers.html"
                     >Compilation for neutral atom quantum computers</a
                   >
                 </h4>
                 <p></p>
-                <h4>
+                <h4 style="font-weight: 500">
                   <a href="/research/calibration-of-trapped-ion-systems.html"
                     >Calibration of trapped-ion systems</a
                   >
                 </h4>
                 <p></p>
-                <h4>
+                <h4 style="font-weight: 500">
                   <a
                     href="/research/charge-noise-in-semiconductor-spin-qubits.html"
                     >Charge noise in semiconductor spin qubits</a
