--- a/notes.html
+++ b/notes.html
@@ -82,35 +82,45 @@
             <div class="col-4 col-12-mobile" id="sidebar">
               <hr class="first" />
               <section class="tag-cloud">
-                <h4><i class="fas fa-university"></i> University</h4>
+                <h4 style="font-weight: 500">
+                  <i class="fas fa-university"></i> University
+                </h4>
                 <div class="tag-container" data-filter="university">
                   <!-- 动态生成大学标签 -->
                 </div>
               </section>
 
               <section class="tag-cloud">
-                <h4><i class="fas fa-calendar-alt"></i> Year</h4>
+                <h4 style="font-weight: 500">
+                  <i class="fas fa-calendar-alt"></i> Year
+                </h4>
                 <div class="tag-container" data-filter="year">
                   <!-- 动态生成年份标签 -->
                 </div>
               </section>
 
               <section class="tag-cloud">
-                <h4><i class="fas fa-layer-group"></i> Level</h4>
+                <h4 style="font-weight: 500">
+                  <i class="fas fa-layer-group"></i> Level
+                </h4>
                 <div class="tag-container" data-filter="level">
                   <!-- 动态生成级别标签 -->
                 </div>
               </section>
 
               <section class="tag-cloud">
-                <h4><i class="fas fa-feather"></i> Subject</h4>
+                <h4 style="font-weight: 500">
+                  <i class="fas fa-feather"></i> Subject
+                </h4>
                 <div class="tag-container" data-filter="subject">
                   <!-- 动态生成学科标签 -->
                 </div>
               </section>
 
               <section class="tag-cloud">
-                <h4><i class="fas fa-language"></i> Language</h4>
+                <h4 style="font-weight: 500">
+                  <i class="fas fa-language"></i> Language
+                </h4>
                 <div class="tag-container" data-filter="language">
                   <!-- 动态生成学科标签 -->
                 </div>
@@ -141,7 +151,9 @@
                   </header>
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Quantum Information (Fall 2023)</h4>
+                      <h4 style="font-weight: 500">
+                        Quantum Information (Fall 2023)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
@@ -165,7 +177,9 @@
                   </div>
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Quantum Optics (Fall 2023)</h4>
+                      <h4 style="font-weight: 500">
+                        Quantum Optics (Fall 2023)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
@@ -186,7 +200,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Mathematical Methods for Physicists (Fall 2023)</h4>
+                      <h4 style="font-weight: 500">
+                        Mathematical Methods for Physicists (Fall 2023)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Math</span>
@@ -213,7 +229,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Advanced Classical Mechanics (Fall 2023)</h4>
+                      <h4 style="font-weight: 500">
+                        Advanced Classical Mechanics (Fall 2023)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span>
                         <span class="pill">Physics</span>
@@ -235,7 +253,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Quantum Theory of Matter (Spring 2024)</h4>
+                      <h4 style="font-weight: 500">
+                        Quantum Theory of Matter (Spring 2024)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
@@ -257,7 +277,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Laser Technology (Spring 2024)</h4>
+                      <h4 style="font-weight: 500">
+                        Laser Technology (Spring 2024)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
@@ -305,7 +327,9 @@
                   </header>
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Mathematical Methods in Physics (Fall 2019)</h4>
+                      <h4 style="font-weight: 500">
+                        Mathematical Methods in Physics (Fall 2019)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Math</span>
@@ -344,7 +368,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Theoretical Mechanics (Fall 2019)</h4>
+                      <h4 style="font-weight: 500">
+                        Theoretical Mechanics (Fall 2019)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -372,7 +398,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Electromagnetics (Fall 2019)</h4>
+                      <h4 style="font-weight: 500">
+                        Electromagnetics (Fall 2019)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -397,7 +425,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Optics (Spring 2020)</h4>
+                      <h4 style="font-weight: 500">Optics (Spring 2020)</h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -447,7 +475,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Analogue Electronics (Spring 2020)</h4>
+                      <h4 style="font-weight: 500">
+                        Analogue Electronics (Spring 2020)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Engineering</span>
@@ -489,7 +519,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Quantum Mechanics (Fall 2020)</h4>
+                      <h4 style="font-weight: 500">
+                        Quantum Mechanics (Fall 2020)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -526,7 +558,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Electrodynamics (Fall 2020)</h4>
+                      <h4 style="font-weight: 500">
+                        Electrodynamics (Fall 2020)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -548,7 +582,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Advanced Quantum Mechanics (Fall 2020)</h4>
+                      <h4 style="font-weight: 500">
+                        Advanced Quantum Mechanics (Fall 2020)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
@@ -570,7 +606,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Digital Electronics (Fall 2020)</h4>
+                      <h4 style="font-weight: 500">
+                        Digital Electronics (Fall 2020)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Engineering</span>
@@ -616,7 +654,7 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>
+                      <h4 style="font-weight: 500">
                         Thermodynamics and Statistical Physics (Spring 2021)
                       </h4>
                       <div class="note-meta">
@@ -649,7 +687,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Solid State Physics (Spring 2021)</h4>
+                      <h4 style="font-weight: 500">
+                        Solid State Physics (Spring 2021)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -671,7 +711,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Quantum Optics (Fall 2021)</h4>
+                      <h4 style="font-weight: 500">
+                        Quantum Optics (Fall 2021)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Graduate</span
                         ><span class="pill">Physics</span>
@@ -700,7 +742,9 @@
 
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Introduction to Plasma Physics (Fall 2021)</h4>
+                      <h4 style="font-weight: 500">
+                        Introduction to Plasma Physics (Fall 2021)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -728,7 +772,9 @@
                   </header>
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Quantum Mechanics II (Summer 2020)</h4>
+                      <h4 style="font-weight: 500">
+                        Quantum Mechanics II (Summer 2020)
+                      </h4>
                       <div class="note-meta">
                         <span class="pill">Undergraduate</span>
                         <span class="pill">Physics</span>
@@ -800,7 +846,7 @@
                   </header>
                   <div class="note-card">
                     <div class="note-header">
-                      <h4>Physics GRE (Fall 2021)</h4>
+                      <h4 style="font-weight: 500">Physics GRE (Fall 2021)</h4>
                       <div class="note-meta">
                         <span class="pill">GRE</span>
                         <span class="pill">Physics</span>
