--- a/research/compilation-for-neutral-atom-quantum-computers.html
+++ b/research/compilation-for-neutral-atom-quantum-computers.html
@@ -77,9 +77,11 @@
               <hr class="first" />
 
               <section>
-                <h4><a href="/research/index.html">Overview</a></h4>
+                <h4 style="font-weight: 500">
+                  <a href="/research/index.html">Overview</a>
+                </h4>
                 <p></p>
-                <h4>
+                <h4 style="font-weight: 500">
                   <a
                     href="/research/compilation-for-neutral-atom-quantum-computers.html"
                     >Compilation for neutral atom quantum computers</a
@@ -95,13 +97,13 @@
                   </li>
                 </ol>
                 <p></p>
-                <h4>
+                <h4 style="font-weight: 500">
                   <a href="/research/calibration-of-trapped-ion-systems.html"
                     >Calibration of trapped-ion systems</a
                   >
                 </h4>
                 <p></p>
-                <h4>
+                <h4 style="font-weight: 500">
                   <a
                     href="/research/charge-noise-in-semiconductor-spin-qubits.html"
                     >Charge noise in semiconductor spin qubits</a
@@ -152,17 +154,17 @@
                 <header>
                   <h3>Hardware</h3>
                 </header>
-                <h4>Optical tweezers</h4>
-                <h4>Architecture</h4>
+                <h4 style="font-weight: 500">Optical tweezers</h4>
+                <h4 style="font-weight: 500">Architecture</h4>
               </section>
               <hr />
               <section id="compilation">
                 <header>
                   <h3>Compilation</h3>
                 </header>
-                <h4>Scheduling</h4>
-                <h4>Placement</h4>
-                <h4>Routing</h4>
+                <h4 style="font-weight: 500">Scheduling</h4>
+                <h4 style="font-weight: 500">Placement</h4>
+                <h4 style="font-weight: 500">Routing</h4>
               </section>
               <hr />
               <section>
