--- a/test.html
+++ b/test.html
@@ -196,7 +196,7 @@
               alt="London View"
             />
             <div class="photo-info">
-              <h3>London Lights</h3>
+              <h3>London</h3>
               <p>December 2024</p>
             </div>
           </a>
@@ -269,111 +269,6 @@
           alwaysShowNavOnTouchDevices: true,
         });
       </script>
-
-      <style>
-        /* 新增网格布局样式 */
-        .photo-grid {
-          display: grid;
-          grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-          gap: 1rem;
-          padding: 2rem;
-        }
-
-        .grid-item {
-          position: relative;
-          overflow: hidden;
-          border-radius: 8px;
-          transition: transform 0.3s ease;
-        }
-
-        .grid-item:hover {
-          transform: scale(1.03);
-        }
-
-        .grid-item img {
-          width: 100%;
-          height: 300px;
-          object-fit: cover;
-          vertical-align: middle;
-        }
-
-        .photo-info {
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          right: 0;
-          background: rgba(0, 0, 0, 0.7);
-          color: white;
-          padding: 1rem;
-          transform: translateY(100%);
-          transition: transform 0.3s ease;
-        }
-
-        .grid-item:hover .photo-info {
-          transform: translateY(0);
-        }
-
-        /* 响应式调整 */
-        @media (max-width: 768px) {
-          .photo-grid {
-            grid-template-columns: 1fr;
-          }
-        }
-
-        /* 新增视频相关样式 */
-        .video-wrapper {
-          position: relative;
-          padding-top: 56.25%; /* 16:9 Aspect Ratio */
-        }
-
-        .video-thumbnail {
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-        }
-
-        .video-thumbnail img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-        }
-
-        .play-button {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-          width: 60px;
-          height: 60px;
-          background: rgba(255, 255, 255, 0.9);
-          border-radius: 50%;
-          transition: all 0.3s ease;
-        }
-
-        .play-button::before {
-          content: "";
-          position: absolute;
-          left: 55%;
-          top: 50%;
-          transform: translate(-40%, -50%);
-          border-style: solid;
-          border-width: 10px 0 10px 20px;
-          border-color: transparent transparent transparent #333;
-          transition: all 0.3s ease;
-        }
-
-        .video-thumbnail:hover .play-button {
-          background: rgba(255, 255, 255, 1);
-          transform: translate(-50%, -50%) scale(1.1);
-        }
-
-        /* 调整网格项中的视频高度 */
-        .grid-item[data-category="video"] {
-          grid-row-end: span 2; /* 占据更多垂直空间 */
-        }
-      </style>
     </div>
   </body>
 </html>
