Update head font weight

--- a/photography.html
+++ b/photography.html
@@ -112,7 +112,7 @@
               alt="London View"
             />
             <div class="photo-info">
-              <h3>London Lights</h3>
+              <h3>London</h3>
               <p>December 2024</p>
             </div>
           </a>
@@ -128,7 +128,7 @@
               alt="London View"
             />
             <div class="photo-info">
-              <h3>London Lights</h3>
+              <h3>Regent street</h3>
               <p>December 2024</p>
             </div>
           </a>
