--- a/photography.html
+++ b/photography.html
@@ -133,43 +133,27 @@
             </div>
           </a>
         </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/switzerland.JPG"
+            data-lightbox="gallery"
+            data-title="Lungern, Switzerland"
+          >
+            <img
+              src="/images/photograph/small/switzerland.jpeg"
+              alt="Switzerland View"
+            />
+            <div class="photo-info">
+              <h3>Lungern, Switzerland</h3>
+              <p>June 2024</p>
+            </div>
+          </a>
+        </div>
       </div>
 
       <!-- Carousel -->
       <section class="carousel">
         <div class="reel">
-          <article>
-            <a href="/images/photograph/full/london2.JPG" class="image featured"
-              ><img src="/images/photograph/small/london2.jpeg" alt=""
-            /></a>
-            <header>
-              <h3><a>London, UK</a></h3>
-            </header>
-            <p>December 2024</p>
-          </article>
-
-          <article>
-            <a href="/images/photograph/full/regents.jpg" class="image featured"
-              ><img src="/images/photograph/small/regents.jpeg" alt=""
-            /></a>
-            <header>
-              <h3><a>Regent Street, London, UK</a></h3>
-            </header>
-            <p>November 2024</p>
-          </article>
-
-          <article>
-            <a
-              href="/images/photograph/full/switzerland.JPG"
-              class="image featured"
-              ><img src="/images/photograph/small/switzerland.jpeg" alt=""
-            /></a>
-            <header>
-              <h3><a>Lungern, Switzerland</a></h3>
-            </header>
-            <p>June 2024</p>
-          </article>
-
           <article>
             <a
               href="/images/photograph/full/copenhagen.JPG"
