--- a/photography.html
+++ b/photography.html
@@ -149,68 +149,84 @@
             </div>
           </a>
         </div>
-      </div>
-
-      <!-- Carousel -->
-      <section class="carousel">
-        <div class="reel">
-          <article>
-            <a
-              href="/images/photograph/full/copenhagen.JPG"
-              class="image featured"
-              ><img src="/images/photograph/small/copenhagen.jpeg" alt=""
-            /></a>
-            <header>
-              <h3><a>Copenhagen, Denmark</a></h3>
-            </header>
-            <p>March 2024</p>
-          </article>
-
-          <article>
-            <a href="/images/photograph/full/paris2.JPG" class="image featured"
-              ><img src="/images/photograph/small/paris2.jpeg" alt=""
-            /></a>
-            <header>
-              <h3><a>Louvre, Paris, France</a></h3>
-            </header>
-            <p>February 2024</p>
-          </article>
-
-          <article>
-            <a href="/images/photograph/full/morocco.JPG" class="image featured"
-              ><img src="/images/photograph/small/morocco.jpeg" alt=""
-            /></a>
-            <header>
-              <h3><a>Tangier, Morocco</a></h3>
-            </header>
-            <p>December 2023</p>
-          </article>
-
-          <article>
-            <a
-              href="/images/photograph/full/morocco2.JPG"
-              class="image featured"
-              ><img src="/images/photograph/small/morocco2.jpeg" alt=""
-            /></a>
-            <header>
-              <h3><a>Chefchaouen, Morocco</a></h3>
-            </header>
-            <p>December 2023</p>
-          </article>
-
-          <article>
-            <a
-              href="/images/photograph/full/beihai_park.JPG"
-              class="image featured"
-              ><img src="/images/photograph/small/beihai_park.jpeg" alt=""
-            /></a>
-            <header>
-              <h3><a>Beihai Park, Beijing, China</a></h3>
-            </header>
-            <p>March 2023</p>
-          </article>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/copenhagen.JPG"
+            data-lightbox="gallery"
+            data-title="Copenhagen, Denmark"
+          >
+            <img
+              src="/images/photograph/small/copenhagen.jpeg"
+              alt="Denmark View"
+            />
+            <div class="photo-info">
+              <h3>Copenhagen, Denmark</h3>
+              <p>March 2024</p>
+            </div>
+          </a>
         </div>
-      </section>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/paris2.JPG"
+            data-lightbox="gallery"
+            data-title="Louvre, Paris, France"
+          >
+            <img src="/images/photograph/small/paris2.jpeg" alt="France View" />
+            <div class="photo-info">
+              <h3>Louvre, Paris, France</h3>
+              <p>February 2024</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/morocco.JPG"
+            data-lightbox="gallery"
+            data-title="Tangier, Morocco"
+          >
+            <img
+              src="/images/photograph/small/morocco.jpeg"
+              alt="Morocco View"
+            />
+            <div class="photo-info">
+              <h3>Tangier, Morocco</h3>
+              <p>December 2023</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/morocco2.JPG"
+            data-lightbox="gallery"
+            data-title="Chefchaouen, Morocco"
+          >
+            <img
+              src="/images/photograph/small/morocco2.jpeg"
+              alt="Morocco View"
+            />
+            <div class="photo-info">
+              <h3>Chefchaouen, Morocco</h3>
+              <p>December 2023</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/beihai_park.JPG"
+            data-lightbox="gallery"
+            data-title="Beihai Park, Beijing, China"
+          >
+            <img
+              src="/images/photograph/small/beihai_park.jpeg"
+              alt="Morocco View"
+            />
+            <div class="photo-info">
+              <h3>Beihai Park, Beijing, China</h3>
+              <p>March 2023</p>
+            </div>
+          </a>
+        </div>
+      </div>
 
       <!-- Carousel -->
       <section class="carousel">
