--- a/photography.html
+++ b/photography.html
@@ -226,56 +226,68 @@
             </div>
           </a>
         </div>
-      </div>
-
-      <!-- Carousel -->
-      <section class="carousel">
-        <div class="reel">
-          <article>
-            <a
-              href="/images/photograph/full/epping_forest.jpg"
-              class="image featured"
-              ><img src="/images/photograph/small/epping_forest.jpeg" alt=""
-            /></a>
-            <header>
-              <h3><a>Epping Forest, UK</a></h3>
-            </header>
-            <p>October 2024</p>
-          </article>
-          <article>
-            <a
-              href="/images/photograph/full/white_cliff.JPG"
-              class="image featured"
-              ><img src="/images/photograph/small/white_cliff.jpeg" alt=""
-            /></a>
-            <header>
-              <h3><a>White Cliff, UK</a></h3>
-            </header>
-            <p>June 2024</p>
-          </article>
-
-          <article>
-            <a
-              href="/images/photograph/full/switzerland2.JPG"
-              class="image featured"
-              ><img src="/images/photograph/small/switzerland2.jpeg" alt=""
-            /></a>
-            <header>
-              <h3><a>Lungern, Switzerland</a></h3>
-            </header>
-            <p>June 2024</p>
-          </article>
-          <article>
-            <a href="/images/photograph/full/paris.JPG" class="image featured"
-              ><img src="/images/photograph/small/paris.jpeg" alt=""
-            /></a>
-            <header>
-              <h3><a>Louvre, Paris, France</a></h3>
-            </header>
-            <p>February 2024</p>
-          </article>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/epping_forest.jpg"
+            data-lightbox="gallery"
+            data-title="Epping Forest, UK"
+          >
+            <img
+              src="/images/photograph/small/epping_forest.jpeg"
+              alt="UK View"
+            />
+            <div class="photo-info">
+              <h3>Epping Forest, UK</h3>
+              <p>October 2024</p>
+            </div>
+          </a>
         </div>
-      </section>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/white_cliff.JPG"
+            data-lightbox="gallery"
+            data-title="Epping Forest, UK"
+          >
+            <img
+              src="/images/photograph/small/white_cliff.jpeg"
+              alt="UK View"
+            />
+            <div class="photo-info">
+              <h3>White Cliff, UK</h3>
+              <p>June 2024</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/switzerland2.JPG"
+            data-lightbox="gallery"
+            data-title="Lungern, Switzerland"
+          >
+            <img
+              src="/images/photograph/small/switzerland2.jpeg"
+              alt="Switzerland View"
+            />
+            <div class="photo-info">
+              <h3>Lungern, Switzerland</h3>
+              <p>June 2024</p>
+            </div>
+          </a>
+        </div>
+        <div class="grid-item city" data-category="city">
+          <a
+            href="/images/photograph/full/paris.JPG"
+            data-lightbox="gallery"
+            data-title="Louvre, Paris, France"
+          >
+            <img src="/images/photograph/small/paris.jpeg" alt="France View" />
+            <div class="photo-info">
+              <h3>February 2024</h3>
+              <p>June 2024</p>
+            </div>
+          </a>
+        </div>
+      </div>
 
       <!-- Footer -->
       <div id="footer">
