--- a/photography.html
+++ b/photography.html
@@ -82,25 +82,29 @@
       </div>
 
       <!-- Main -->
-      <!-- Main -->
-      <div class="wrapper style1">
-        <section class="container special">
-          <header>
-            <h3>2024 Through My Lens</h3>
-            <br />
-            <div class="video-container">
-              <iframe
-                src="https://youtube.com/embed/PSpghrPLQXI"
-                frameborder="0"
-                allowfullscreen
-              ></iframe>
+
+      <div class="grid-item video" data-category="video">
+        <div class="video-wrapper">
+          <a
+            href="https://youtu.be/PSpghrPLQXI"
+            data-lightbox="video-gallery"
+            data-title="My Travel Memories"
+            class="video-thumbnail"
+          >
+            <img
+              src="//img.youtube.com/vi/PSpghrPLQXI/maxresdefault.jpg"
+              alt="Video thumbnail"
+            />
+            <div class="play-button"></div>
+            <div class="photo-info">
+              <h3>Travel Memories</h3>
+              <p>2024 Highlights</p>
             </div>
-          </header>
-        </section>
+          </a>
+        </div>
       </div>
 
       <div class="photo-grid">
-        <!-- 示例条目 - 需要复制修改每个作品 -->
         <div class="grid-item city" data-category="city">
           <a
             href="/images/photograph/full/london2.JPG"
