--- a/photography.html
+++ b/photography.html
@@ -83,24 +83,26 @@
 
       <!-- Main -->
 
-      <div class="grid-item video" data-category="video">
-        <div class="video-wrapper">
-          <a
-            href="https://youtu.be/PSpghrPLQXI"
-            data-lightbox="video-gallery"
-            data-title="My Travel Memories"
-            class="video-thumbnail"
-          >
-            <img
-              src="//img.youtube.com/vi/PSpghrPLQXI/maxresdefault.jpg"
-              alt="Video thumbnail"
-            />
-            <div class="play-button"></div>
-            <div class="photo-info">
-              <h3>Travel Memories</h3>
-              <p>2024 Highlights</p>
-            </div>
-          </a>
+      <div class="photo-grid">
+        <div class="grid-item video" data-category="video">
+          <div class="video-wrapper">
+            <a
+              href="https://youtu.be/PSpghrPLQXI"
+              data-lightbox="video-gallery"
+              data-title="My Travel Memories"
+              class="video-thumbnail"
+            >
+              <img
+                src="//img.youtube.com/vi/PSpghrPLQXI/maxresdefault.jpg"
+                alt="Video thumbnail"
+              />
+              <div class="play-button"></div>
+              <div class="photo-info">
+                <h3>Travel Memories</h3>
+                <p>2024 Highlights</p>
+              </div>
+            </a>
+          </div>
         </div>
       </div>
 
