--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@
         --radius-xl: 25px;
         --shadow: 0 8px 30px rgba(0, 0, 0, 0.12);
       }
-
-      
-
-      
     </style>
   </head>
   <body class="homepage is-preload">
@@ -172,7 +168,7 @@
             <div class="col-9 col-12-mobile imp-mobile" id="content">
               <header>
                 <h2>
-                  👋 Hi, I'm <strong style="font-weight: 700">Chen</strong>,
+                  👋 Hi, I'm <strong>Chen</strong>,
                   <div class="pronunciation-wrap">
                     <button
                       class="pronunciation-btn"
@@ -198,7 +194,7 @@
                 ></audio>
                 <p>
                   a passionate physics student exploring the
-                  <strong style="font-weight: 700">quantum world</strong>.
+                  <strong>quantum world</strong>.
                 </p>
               </header>
             </div>
@@ -207,18 +203,18 @@
         <div class="container">
           <article id="main" class="special">
             <p>
-              My given name is <strong style="font-weight: 600">Chen</strong>,
-              which means "dawn" or "early morning" in Chinese. This meaning
-              suits me well, as I am a morning person who enjoys the calm and
-              peacefulness of the early hours. Interestingly, "Chen" is
-              sometimes misheard as "Cheng," which means "orange" in Chinese.
-              Because of this playful similarity, my friends affectionately call
-              me "Cheng-Zi," meaning "orange."
+              My given name is <strong>Chen</strong>, which means "dawn" or
+              "early morning" in Chinese. This meaning suits me well, as I am a
+              morning person who enjoys the calm and peacefulness of the early
+              hours. Interestingly, "Chen" is sometimes misheard as "Cheng,"
+              which means "orange" in Chinese. Because of this playful
+              similarity, my friends affectionately call me "Cheng-Zi," meaning
+              "orange."
             </p>
             <p>
-              My surname is <strong style="font-weight: 600">Huang</strong>,
-              which means "yellow" in Chinese. This name has deep historical and
-              cultural roots. It is often associated with the
+              My surname is <strong>Huang</strong>, which means "yellow" in
+              Chinese. This name has deep historical and cultural roots. It is
+              often associated with the
               <a href="https://en.wikipedia.org/wiki/Yellow_Emperor"
                 >Yellow Emperor</a
               >, a legendary figure considered one of the founding ancestors of
@@ -279,13 +275,12 @@
                     >charge noise in semiconductor spin qubits for quantum
                     computing</i
                   ></strong
-                >. My work involves
-                <strong style="font-weight: 600">wire bonding</strong> quantum
+                >. My work involves <strong>wire bonding</strong> quantum
                 devices for characterization and studying
-                <strong style="font-weight: 600">charge transport</strong> in
-                semiconductor quantum dots at cryogenic temperatures using a
-                <strong style="font-weight: 600">dilution refrigerator</strong>.
-                To streamline experiments, I
+                <strong>charge transport</strong> in semiconductor quantum dots
+                at cryogenic temperatures using a
+                <strong>dilution refrigerator</strong>. To streamline
+                experiments, I
                 <strong style="font-weight: 600"
                   >developed automated Python packages</strong
                 >
@@ -306,8 +301,7 @@
                 <strong style="font-weight: 700"
                   ><i>compilation for neutral atom quantum computers</i></strong
                 >, an emerging quantum research field. I introduced
-                <strong style="font-weight: 600">ZAP</strong>, a zoned
-                architecture that
+                <strong>ZAP</strong>, a zoned architecture that
                 <strong
                   >divides the computational area into distinct storage and
                   entanglement zones</strong
@@ -338,13 +332,11 @@
                     computers</i
                   ></strong
                 >, enabling precise determination of
-                <strong style="font-weight: 600">phonon frequencies</strong> and
-                <strong style="font-weight: 600">Lamb-Dicke parameters</strong>.
-                This Python-based tool minimized manual intervention and
-                enhanced parameter accuracy, leading to
-                <strong style="font-weight: 600">three patents</strong>. My
-                experience at Baidu strengthened my
-                <strong style="font-weight: 600">coding skills</strong>,
+                <strong>phonon frequencies</strong> and
+                <strong>Lamb-Dicke parameters</strong>. This Python-based tool
+                minimized manual intervention and enhanced parameter accuracy,
+                leading to <strong>three patents</strong>. My experience at
+                Baidu strengthened my <strong>coding skills</strong>,
                 particularly in code quality, documentation, and
                 maintainability, ensuring the long-term usability of developed
                 tools.
@@ -372,9 +364,8 @@
                   concentration</strong
                 >. Additionally, I developed a 2D axisymmetric model for a
                 Surface Forces Apparatus cavity and performed finite element
-                analysis using <strong style="font-weight: 600">COMSOL</strong>,
-                demonstrating strong agreement between analytical and simulation
-                results.
+                analysis using <strong>COMSOL</strong>, demonstrating strong
+                agreement between analytical and simulation results.
               </p>
             </div>
 
@@ -424,10 +415,9 @@
                 <strong style="font-weight: 700"
                   ><i>STM study on topological insulators</i></strong
                 >. My work involved
-                <strong style="font-weight: 600">fabricating STM tips</strong>
+                <strong>fabricating STM tips</strong>
                 via electrochemical methods, performing
-                <strong style="font-weight: 600">Raman spectroscopy</strong>,
-                and studying
+                <strong>Raman spectroscopy</strong>, and studying
                 <strong style="font-weight: 600"
                   >Molecular Beam Epitaxy (MBE)</strong
                 >
@@ -435,9 +425,8 @@
                 <strong style="font-weight: 600"
                   >Scanning Tunneling Microscopy (STM)</strong
                 >. Additionally, I contributed to assembling a
-                <strong style="font-weight: 600">dilution refrigerator</strong>,
-                gaining hands-on experience with advanced experimental
-                techniques.
+                <strong>dilution refrigerator</strong>, gaining hands-on
+                experience with advanced experimental techniques.
               </p>
             </div>
           </section>
@@ -469,22 +458,16 @@
                 >
               </li>
               <li>
-                <strong style="font-weight: 700">Yan Ji-Ci Scholarship</strong>,
-                Institute of Physics, Chinese Academy of Sciences, 2020
+                <strong>Yan Ji-Ci Scholarship</strong>, Institute of Physics,
+                Chinese Academy of Sciences, 2020
               </li>
               <li>
-                <strong style="font-weight: 700">UCAS Scholarship</strong>,
-                University of Chinese Academy of Sciences, 2020.
+                <strong>UCAS Scholarship</strong>, University of Chinese Academy
+                of Sciences, 2020.
               </li>
 
-              <li>
-                <strong style="font-weight: 700">Outstanding Graduate</strong>,
-                HUST, 2022
-              </li>
-              <li>
-                <strong style="font-weight: 700">Outstanding Intern</strong>,
-                Baidu, Inc., 2023
-              </li>
+              <li><strong>Outstanding Graduate</strong>, HUST, 2022</li>
+              <li><strong>Outstanding Intern</strong>, Baidu, Inc., 2023</li>
             </ul>
           </section>
         </div>
