--- a/outreach/ibpe.html
+++ b/outreach/ibpe.html
@@ -79,9 +79,8 @@
             </header>
             <p>
               During May 2019 - July 2020, I was the
-              <strong style="font-weight: 700">chairperson</strong> of IBPE. I
-              was the first female leader of the platform since its
-              establishment in 2002.
+              <strong>chairperson</strong> of IBPE. I was the first female
+              leader of the platform since its establishment in 2002.
             </p>
             <section>
               <header>
@@ -151,9 +150,8 @@
               </header>
               <p>
                 After competing in the 2019 CUPT, our team proudly secured
-                <strong style="font-weight: 700">second place nationwide</strong
-                >. This photo captures our joyful celebration after the
-                competition.
+                <strong>second place nationwide</strong>. This photo captures
+                our joyful celebration after the competition.
               </p>
             </article>
             <article class="col-4 col-12-mobile special">
