--- a/research/calibration-of-trapped-ion-systems.html
+++ b/research/calibration-of-trapped-ion-systems.html
@@ -124,9 +124,9 @@
                 <ul>
                   <li>
                     J. Wang and
-                    <strong style="font-weight: 600">C. Huang</strong>, "Ion
-                    trap chip parameter determining method and device,
-                    electronic equipment and medium,"
+                    <strong>C. Huang</strong>, "Ion trap chip parameter
+                    determining method and device, electronic equipment and
+                    medium,"
                     <i
                       >Chinese Patent
                       <a href="https://patents.google.com/patent/CN117371547/en"
@@ -136,9 +136,9 @@
                   </li>
                   <li>
                     J. Wang and
-                    <strong style="font-weight: 600">C. Huang</strong>, "Ion
-                    trap chip parameter calibration method and device,
-                    electronic equipment and medium,"
+                    <strong>C. Huang</strong>, "Ion trap chip parameter
+                    calibration method and device, electronic equipment and
+                    medium,"
                     <i
                       >Chinese Patent
                       <a href="https://patents.google.com/patent/CN117494829/en"
@@ -147,9 +147,9 @@
                     >, Granted 2024.
                   </li>
                   <li>
-                    <strong style="font-weight: 600">C. Huang</strong> and J.
-                    Wang, "Ion trap chip parameter correction method and device,
-                    electronic equipment and medium,"
+                    <strong>C. Huang</strong> and J. Wang, "Ion trap chip
+                    parameter correction method and device, electronic equipment
+                    and medium,"
                     <i
                       >Chinese Patent
                       <a href="https://patents.google.com/patent/CN117454997/en"
@@ -176,7 +176,7 @@
                 </p>
                 <ol>
                   <li>
-                    <strong style="font-weight: 600">Qubit encoding:</strong>
+                    <strong>Qubit encoding:</strong>
                     Individual ions are used as qubits by leveraging different
                     energy levels within the ion. These levels often result from
                     orbital splitting, forming fine or hyperfine structures. The
@@ -194,7 +194,7 @@
                     states.
                   </li>
                   <li>
-                    <strong style="font-weight: 600">Qubit coupling:</strong>
+                    <strong>Qubit coupling:</strong>
                     Since ions are charged particles, they interact with one
                     another through Coulomb forces, which include long-range
                     interaction terms. This natural property allows ions in a
