--- a/research/index.html
+++ b/research/index.html
@@ -108,21 +108,17 @@
                 </header>
                 <p>
                   Throughout my research journey, I have worked with various
-                  <strong style="font-weight: 600">quantum computing</strong>
+                  <strong>quantum computing</strong>
                   platforms, including
-                  <strong style="font-weight: 600">trapped ions</strong>,
-                  <strong style="font-weight: 600">neutral atoms</strong>, and
-                  <strong style="font-weight: 600">semiconductors</strong>.
-                  These experiences have provided me with a comprehensive
-                  perspective on quantum computing as a multifaceted field,
-                  encompassing
-                  <strong style="font-weight: 600">physical</strong>,
-                  <strong style="font-weight: 600">logical</strong>, and
-                  <strong style="font-weight: 600">application</strong> layers.
-                  At the physical level, I am particularly interested in
-                  <strong style="font-weight: 600">qubit control</strong>. My
-                  work in
-                  <strong style="font-weight: 600">quantum compilation</strong>
+                  <strong>trapped ions</strong>, <strong>neutral atoms</strong>,
+                  and <strong>semiconductors</strong>. These experiences have
+                  provided me with a comprehensive perspective on quantum
+                  computing as a multifaceted field, encompassing
+                  <strong>physical</strong>, <strong>logical</strong>, and
+                  <strong>application</strong> layers. At the physical level, I
+                  am particularly interested in <strong>qubit control</strong>.
+                  My work in
+                  <strong>quantum compilation</strong>
                   has allowed me to explore the logical layer, deepening my
                   understanding of the interactions between these levels. I am
                   also eager to explore different quantum applications.
