--- a/presentations.html
+++ b/presentations.html
@@ -80,7 +80,7 @@
               </header>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Research Progress: </strong
+                  <strong>Research Progress: </strong
                   ><a
                     >ZAP: Zoned Architecture and Parallelizable Compiler for
                     FPQA </a
@@ -94,7 +94,7 @@
               </ul>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Research Progress: </strong
+                  <strong>Research Progress: </strong
                   ><a href="/docs/presentations/2024-08-21-charge-noise.pdf"
                     >Charge Noise in Semiconductor Spin Qubits for Quantum
                     Computing</a
@@ -107,7 +107,7 @@
               </ul>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Research Progress: </strong
+                  <strong>Research Progress: </strong
                   ><a>Rydberg Quantum Computing and Compilation</a><br />
                   <i class="fas fa-calendar-day"></i>&nbsp;&nbsp;July 23,
                   2024<br />
@@ -118,7 +118,7 @@
               </ul>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Journal Club: </strong
+                  <strong>Journal Club: </strong
                   ><a href="/docs/presentations/2024-05-28-Rydberg.pdf"
                     >Quantum Computing with Rydberg Atoms</a
                   ><br />
@@ -130,7 +130,7 @@
               </ul>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Course Presentation: </strong
+                  <strong>Course Presentation: </strong
                   ><a href="/docs/presentations/2024-02-22-scaling.pdf"
                     >Architectures and Approaches in Scaling the Trapped-Ion
                     Quantum Computer</a
@@ -148,7 +148,7 @@
               </header>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Quarterly Session: </strong
+                  <strong>Quarterly Session: </strong
                   ><a href="/docs/presentations/2023-08-31-calibration.pdf"
                     >Automated Calibration of Experimental Parameters in
                     Trapped-Ion Quantum Computing</a
@@ -180,7 +180,7 @@
               </header>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Bachelor's Degree: </strong
+                  <strong>Bachelor's Degree: </strong
                   ><a href="/docs/presentations/2022-05-25-NV-sensing.pdf"
                     >Nanoscale Detection of Ions Using a Spin Quantum Sensor</a
                   ><br />
@@ -191,7 +191,7 @@
               </ul>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Journal Club: </strong
+                  <strong>Journal Club: </strong
                   ><a href="/docs/presentations/2022-01-14-progress-talk.pdf"
                     >Ions in an AC Electric Field</a
                   ><br />
@@ -209,7 +209,7 @@
               </header>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Journal Club: </strong
+                  <strong>Journal Club: </strong
                   ><a href="/docs/presentations/2021-06-08-journal.pdf"
                     >An Introduction to Ghost Imagine: Quantum and Classical</a
                   ><br />
@@ -221,7 +221,7 @@
               </ul>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Class Presentation: </strong
+                  <strong>Class Presentation: </strong
                   ><a href="/docs/presentations/2021-06-01-G.pdf"
                     >Measurement of the Gravitational Constant</a
                   ><br />
@@ -232,7 +232,7 @@
               </ul>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Journal Club: </strong
+                  <strong>Journal Club: </strong
                   ><a href="/docs/presentations/2021-04-20-journal.pdf"
                     >Polarization Entanglement-Enabled Quantum Holography</a
                   ><br />
@@ -245,7 +245,7 @@
               </ul>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Journal Club: </strong
+                  <strong>Journal Club: </strong
                   ><a href="/docs/presentations/2021-03-30-journal.pdf"
                     >General Model of Photon-Pair Detection with an Image
                     Sensor</a
@@ -264,7 +264,7 @@
               </header>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Class Presentation: </strong
+                  <strong>Class Presentation: </strong
                   ><a
                     href="/docs/presentations/2020-12-10-quantum-measurement.pdf"
                     >Quantum Entanglement and Quantum Measurement</a
@@ -282,7 +282,7 @@
               </header>
               <ul>
                 <li>
-                  <strong style="font-weight: 700">Class Presentation: </strong
+                  <strong>Class Presentation: </strong
                   ><a
                     href="/docs/presentations/2019-11-16-magnetic-field-distribution.pdf"
                     >Magnetic Field Distribution in Current-Carrying Solenoids
