--- a/research/compilation-for-neutral-atom-quantum-computers.html
+++ b/research/compilation-for-neutral-atom-quantum-computers.html
@@ -129,10 +129,9 @@
                 </p>
                 <ul>
                   <li>
-                    <strong style="font-weight: 600">C. Huang</strong>, X. Zhao,
-                    H. Xu, W. Zhuang, M.-J. Hu, D. E. Liu, and J. Wang, "ZAP:
-                    Zoned Architecture and Parallelizable Compiler for Field
-                    Programmable Atom Array,"
+                    <strong>C. Huang</strong>, X. Zhao, H. Xu, W. Zhuang, M.-J.
+                    Hu, D. E. Liu, and J. Wang, "ZAP: Zoned Architecture and
+                    Parallelizable Compiler for Field Programmable Atom Array,"
                     <i
                       >arXiv preprint
                       <a href="https://arxiv.org/abs/2411.14037"
