--- a/photography.html
+++ b/photography.html
@@ -98,8 +98,7 @@
               />
               <div class="play-button"></div>
               <div class="photo-info">
-                <h3>Travel Memories</h3>
-                <p>2024 Highlights</p>
+                <h3>2024 Highlights</h3>
               </div>
             </a>
           </div>
